--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SenpaiNet</title>
+  <title>SenpaiNet｜いつでもどこでも先輩に相談を</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
