--- a/index.html
+++ b/index.html
@@ -70,26 +70,26 @@
   <!-- About -->
   <section id="about" class="section container">
     <h2>私たちについて</h2>
-    <p>地域の現場を大切にし、教育・デジタル推進・地域連携の3軸でサポートを行います。</p>
+    <p>SenpaiNetはISSを卒業した先輩が在校生の受験や勉強で悩みに寄り添うコミュニティを目指します</p>
     <div class="stats">
-      <div class="stat"><span>設立</span>2018年</div>
-      <div class="stat"><span>プロジェクト数</span>120+</div>
-      <div class="stat"><span>相談実績</span>500+</div>
-      <div class="stat"><span>スタッフ</span>20名</div>
+      <div class="stat"><span>設立</span>2025年</div>
+      <div class="stat"><span>登録卒業生数</span>--</div>
+      <div class="stat"><span>相談投稿数</span>--</div>
+      <div class="stat"><span>運営スタッフ</span>8名</div>
     </div>
   </section>
 
   <!-- Services -->
   <section id="services" class="section container">
-    <h2>サービス</h2>
+    <h2>SenpaiNetでできること</h2>
     <div class="cards">
       <div class="card">
-        <h3>地域活性化支援</h3>
-        <p>イベント企画・地域ブランディング・資金調達支援など。</p>
+        <h3>Senpaiへの相談</h3>
+        <p>相談内容を投稿することで悩みを共有し、卒業生と一緒に解決</p>
       </div>
       <div class="card">
-        <h3>教育プログラム</h3>
-        <p>家庭でできるコンピュータ教育、教員研修、教材開発。</p>
+        <h3>過去の相談内容の閲覧</h3>
+        <p>過去の相談内容もウェブサイト上で閲覧できます</p>
       </div>
       <div class="card">
         <h3>DX導入支援</h3>
@@ -137,4 +137,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
