--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>相談詳細 | 未来図プラットフォーム</title>
+  <title>SenpaiNet｜相談詳細</title>
   <link rel="stylesheet" href="detail.css">
 </head>
 <body class="detail-page">
@@ -17,3 +17,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
