--- a/post.html
+++ b/post.html
@@ -32,6 +32,11 @@
             <span class="tag-option" data-tag="課外活動">#課外活動</span>
             <span class="tag-option" data-tag="履修">#履修</span>
             <span class="tag-option" data-tag="海外大学">#海外大学</span>
+            <span class="tag-option" data-tag="部活">#部活</span>
+            <span class="tag-option" data-tag="英検">#英検</span>
+            <span class="tag-option" data-tag="IELTS">#IELTS</span>
+            <span class="tag-option" data-tag="TOEFL">#TOEFL</span>
+            <span class="tag-option" data-tag="模試">#模試</span>
           </div>
         </div>
 
@@ -44,4 +49,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
