--- a/archive.html
+++ b/archive.html
@@ -4,6 +4,30 @@
   <meta charset="UTF-8">
   <title>投稿一覧 | SenpaiNet</title>
   <link rel="stylesheet" href="archive.css">
+
+  <!-- Firebase SDKの読み込み -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+  // あなたのプロジェクト設定（貼り付け）
+const firebaseConfig = {
+  apiKey: "AIzaSyCwPtYMU_xiM5YgcqfNsCFESkj-Y4ICD5E",
+  authDomain: "senpainet-84a24.firebaseapp.com",
+  projectId: "senpainet-84a24",
+  storageBucket: "senpainet-84a24.firebasestorage.app",
+  messagingSenderId: "1053589632945",
+  appId: "1:1053589632945:web:413919be47760675e4ef90",
+  measurementId: "G-1GPKNSMMFZ"
+};
+
+
+  // Firebase初期化
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  window.db = db; // 他スクリプトでも使えるようにする
+</script>
+
 </head>
 <body class="list-page">
 
@@ -45,4 +69,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
