--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <a href="#about" class="btn btn-outline">詳しく見る</a>
       </div>
       <p class="contact-info">メール: issjukensoudandokoro@gmail.com</p>
-    </div>
-    <div class="senpainet logo.png">
-    </div>
+  <div class="hero-right">
+    <img src="senpainet logo.png" alt="SenpaiNet ロゴ" class="hero-logo">
+  </div>
   </section>
 
 <!--相談セクション-->
@@ -139,3 +139,4 @@
 </body>
 
 </html>
+
