--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <a href="archive.html">相談を見る</a>
       <a href="#">実績</a>
       <a href="#">お問い合わせ</a>
-      <a href="signup.html" class="account-link">👤 アカウント</a>
+      <!-- ★ここを変更: リンク先を login.html に、文字を「ログイン」に変更 -->
+      <a href="login.html" class="account-link">🔑 ログイン</a>
     </nav>
   </div>
 </header>
@@ -36,6 +37,7 @@
         <a href="#about" class="btn btn-outline">詳しく見る</a>
       </div>
       <p class="contact-info">メール: issjukensoudandokoro@gmail.com</p>
+    </div>
     <div class="hero-right">
       <img src="senpainet logo.png" alt="SenpaiNet ロゴ" class="hero-logo">
     </div>
@@ -137,7 +139,4 @@
 
   <script src="script.js"></script>
 </body>
-
 </html>
-
-
