--- a/archive.html
+++ b/archive.html
@@ -86,7 +86,8 @@
     </section>
   </main>
    
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
