--- a/archive.html
+++ b/archive.html
@@ -86,8 +86,9 @@
     </section>
   </main>
    
-  <script type="module" src="script.js"></script>
+  <script type="module" src="post_script.js"></script>
 </body>
 </html>
+
 
 
