--- a/post.html
+++ b/post.html
@@ -70,7 +70,7 @@ const firebaseConfig = {
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script type="module" src="post_script.js"></script>
 </body>
-
 </html>
+
