--- a/post.html
+++ b/post.html
@@ -64,7 +64,8 @@
       <a href="index.html" class="back-link">← ホームに戻る</a>
     </div>
   </div>
-  <script type="module" src="post_script.js"></script>
+<script type="module" src="post.js"></script>
 
 </body>
 </html>
+
