--- a/archive.html
+++ b/archive.html
@@ -37,6 +37,7 @@
       </section>
   </main>
     
-  <script type="module" src="script.js"></script>
+<script type="module" src="archive.js"></script>
 </body>
 </html>
+
