--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,9 @@
     <a href="archive.html" class="back-link">← 一覧に戻る</a>
   </div>
 
-  <script src="script.js"></script>
+<script type="module" src="detail.js"></script>
+
 </body>
 </html>
+
 
