--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SenpaiNet｜相談プラットフォーム</title>
+
+  <!-- ここを必ず追加！ -->
+  <link rel="stylesheet" href="style.css" />
+</head>
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -106,3 +114,4 @@
 
 </body>
 </html>
+
