--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- ★ロゴカード -->
         <div class="hero-logo-card">
-          <img src="senpainet-logo.png" alt="SenpaiNet ロゴ" />
+          <img src="senpainet logo.png" alt="SenpaiNet ロゴ" />
         </div>
 
       </div>
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
