--- a/post.html
+++ b/post.html
@@ -64,9 +64,11 @@
       <a href="index.html" class="back-link">← ホームに戻る</a>
     </div>
   </div>
+<script type="module" src="firebase.js"></script>
 <script type="module" src="post.js"></script>
 
 </body>
 </html>
+
 
 
