--- a/archive.html
+++ b/archive.html
@@ -37,8 +37,10 @@
       </section>
   </main>
     
+<script type="module" src="firebase.js"></script>
 <script type="module" src="archive.js"></script>
 </body>
 </html>
+
 
 
