--- a/detail.html
+++ b/detail.html
@@ -14,10 +14,12 @@
     <a href="archive.html" class="back-link">← 一覧に戻る</a>
   </div>
 
+<script type="module" src="firebase.js"></script>
 <script type="module" src="detail.js"></script>
 
 </body>
 </html>
+
 
 
 
