--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <div class="hero-right slide-right">
-    <img src="logo.png" alt="SenpaiNet Logo">
+    <img src="senpainet logo.png" alt="SenpaiNet Logo">
   </div>
 </section>
 
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
