--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>SenpaiNet | 先輩に相談してみよう</title>
+  <title>SenpaiNet | ISS生用相談プラットフォーム</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
 
 <section class="hero">
   <div class="hero-left slide-left">
-    <h1>その悩みを、<br><span class="accent">先輩</span>に相談してみよう</h1>
+    <h1>その悩み、<br><span class="accent">先輩</span>に相談してみよう</h1>
 
     <p class="subtxt">
       ISSの在校生が卒業生に気軽に相談できるプラットフォームです。
@@ -50,4 +50,5 @@
 
 </body>
 </html>
+
 
