--- a/index.html
+++ b/index.html
@@ -48,25 +48,11 @@
 <section class="about fade-up">
   <h2>SenpaiNetについて</h2>
   <p class="about-text">
-    SenpaiNetは、ISSの在校生が卒業生に気軽に相談できるコミュニティプラットフォームです。
+    SenpaiNetは、ISSの在校生が卒業生に気軽に匿名で相談できるコミュニティプラットフォームです。
     進路・履修・学校生活・課外活動など、先輩だからこそ分かるリアルなアドバイスをもらうことができます。
-    あなたの悩みを、ひとりで抱えなくても大丈夫。ここから一歩踏み出せます。
+    あなたの悩みを、共有しませんか？
   </p>
 </section>
-
-<!-- お問い合わせ -->
-<section class="contact fade-up">
-  <h2>お問い合わせ</h2>
-  <p class="contact-text">
-    ご質問・ご意見・コラボ依頼などありましたら、以下のメールにご連絡ください。
-  </p>
-
-  <div class="contact-box">
-    <p class="contact-mail">📩 issjukensoudandokoro@gmail.com</p>
-    <a href="mailto:issjukensoudandokoro@gmail.com" class="contact-btn">メールを送る</a>
-  </div>
-</section>
-
 
 <footer>
   © 2025 SenpaiNet | All Rights Reserved.
@@ -74,6 +60,7 @@
 
 </body>
 </html>
+
 
 
 
