--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 <footer>
   © 2025 SenpaiNet | All Rights Reserved.
 </footer>
-
+<script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
