--- a/archive.html
+++ b/archive.html
@@ -39,8 +39,10 @@
     
 <script type="module" src="firebase.js"></script>
 <script type="module" src="archive.js"></script>
+<script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
