--- a/post.html
+++ b/post.html
@@ -66,9 +66,10 @@
   </div>
 <script type="module" src="firebase.js"></script>
 <script type="module" src="post.js"></script>
-
+<script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
