--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,10 @@
         <input type="text" id="nickname" placeholder="個人名はお控えください" required>
 
         <label for="grade">何回生ですか？</label>
+        <label>アイコンを選択</label>
+        <div class="tag-options" id="iconSelection" style="margin-bottom: 20px;">
+        </div>
+        <input type="hidden" id="selectedIconUrl">
         <select id="grade" required>
           <option value="">選択してください</option>
           <option>13回生</option>
@@ -57,3 +61,4 @@
   <script type="module" src="signup.js"></script>
 </body>
 </html>
+
