--- a/signup.html
+++ b/signup.html
@@ -29,10 +29,6 @@
         <input type="text" id="nickname" placeholder="個人名はお控えください" required>
 
         <label for="grade">何回生ですか？</label>
-        <label>アイコンを選択</label>
-        <div class="tag-options" id="iconSelection" style="margin-bottom: 20px;">
-        </div>
-        <input type="hidden" id="selectedIconUrl">
         <select id="grade" required>
           <option value="">選択してください</option>
           <option>13回生</option>
@@ -40,6 +36,13 @@
           <option>15回生</option>
           <option>16回生</option>
         </select>
+
+        <label>アイコンを選択</label>
+        <div class="tag-options" id="iconSelection" style="margin-bottom: 20px;">
+          </div>
+        
+        <input type="hidden" id="selectedIconUrl">
+
 
         <div id="alumniTags" class="tag-select hidden">
           <label>得意分野（最大3つ）</label>
@@ -59,6 +62,6 @@
   </div>
 
   <script type="module" src="signup.js"></script>
+  <script type="module" src="auth_header.js"></script>
 </body>
 </html>
-
