--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>マイページ | SenpaiNet</title>
   <link rel="stylesheet" href="style.css">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+
   <style>
-    /* === スタイル定義 === */
+    /* === スタイル定義 (既存) === */
     body { background-color: #f8fafd; }
     .profile-container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
 
@@ -104,6 +108,31 @@
     }
     .tag-option-btn.selected { background: #4da6ff; color: white; border-color: #4da6ff; }
 
+    /* ★追加: ファイルアップロードボタン */
+    .file-upload-btn {
+      display: inline-block; padding: 10px 20px; background: #fff; color: #333;
+      border: 2px solid #ddd; border-radius: 8px; cursor: pointer; font-weight: bold;
+      margin-bottom: 15px; transition: 0.2s;
+    }
+    .file-upload-btn:hover { background: #f0f0f0; border-color: #bbb; }
+
+    /* ★追加: トリミング用モーダル */
+    .cropper-modal-overlay {
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8); z-index: 10000;
+      display: none; justify-content: center; align-items: center;
+    }
+    .cropper-container-box {
+      background: white; padding: 20px; border-radius: 12px;
+      width: 90%; max-width: 500px; max-height: 90vh;
+      display: flex; flex-direction: column;
+    }
+    .cropper-image-wrapper {
+      max-height: 60vh; overflow: hidden; margin-bottom: 20px; background: #333;
+    }
+    /* 画像が枠に収まるように */
+    .cropper-image-wrapper img { max-width: 100%; display: block; }
+
     @keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
   </style>
 </head>
@@ -134,7 +163,15 @@
 
       <div class="edit-mode-area" id="iconEditArea" style="background: rgba(255,255,255,0.1); border:none; color:white;">
           <h3 style="margin-bottom:15px;">新しいアイコンを選択</h3>
+          
+          <label for="iconFileInput" class="file-upload-btn">
+            📂 パソコンから画像を選択
+          </label>
+          <input type="file" id="iconFileInput" accept="image/*" style="display:none;">
+
+          <p style="margin: 10px 0;">または色を選択:</p>
           <div class="selection-container" id="iconSelectionContainer" style="justify-content: center; margin-bottom: 20px;"></div>
+          
           <div class="action-buttons" style="justify-content: center;">
               <button class="cancel-btn" id="iconCancelBtn" style="background:rgba(255,255,255,0.2); color:white;">キャンセル</button>
               <button class="save-btn" id="iconSaveBtn">アイコンを保存</button>
@@ -147,7 +184,6 @@
         <div class="card-title"><span>📋</span>基本データ</div>
         <button id="basicInfoEditBtn" class="edit-btn">編集する</button>
       </div>
-
       <div id="basicInfoViewMode">
         <ul class="info-list">
           <li class="info-item"><span class="info-label">ニックネーム:</span><span class="info-value" id="infoNickname">-</span></li>
@@ -155,7 +191,6 @@
           <li class="info-item"><span class="info-label">学年:</span><span class="info-value" id="infoGrade">-</span></li>
         </ul>
       </div>
-
       <div class="edit-mode-area" id="basicInfoEditArea">
           <div class="form-group">
               <label class="form-label">ニックネーム</label>
@@ -214,6 +249,19 @@
     </section>
 
   </main>
+
+  <div class="cropper-modal-overlay" id="cropperModal">
+    <div class="cropper-container-box">
+      <h3 style="margin-top:0; color:#333;">画像を切り抜く</h3>
+      <div class="cropper-image-wrapper">
+        <img id="cropperImage" src="" alt="編集用画像">
+      </div>
+      <div class="action-buttons">
+        <button class="cancel-btn" id="cropperCancelBtn">キャンセル</button>
+        <button class="save-btn" id="cropperConfirmBtn">切り抜きを確定</button>
+      </div>
+    </div>
+  </div>
   
   <script type="module" src="profile.js"></script>
 </body>
