--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 
   <style>
-    /* === スタイル定義 (既存) === */
+    /* === スタイル定義 === */
     body { background-color: #f8fafd; }
     .profile-container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
 
@@ -108,7 +108,7 @@
     }
     .tag-option-btn.selected { background: #4da6ff; color: white; border-color: #4da6ff; }
 
-    /* ★追加: ファイルアップロードボタン */
+    /* ファイルアップロードボタン */
     .file-upload-btn {
       display: inline-block; padding: 10px 20px; background: #fff; color: #333;
       border: 2px solid #ddd; border-radius: 8px; cursor: pointer; font-weight: bold;
@@ -116,7 +116,7 @@
     }
     .file-upload-btn:hover { background: #f0f0f0; border-color: #bbb; }
 
-    /* ★追加: トリミング用モーダル */
+    /* トリミング用モーダル */
     .cropper-modal-overlay {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background: rgba(0,0,0,0.8); z-index: 10000;
@@ -130,7 +130,6 @@
     .cropper-image-wrapper {
       max-height: 60vh; overflow: hidden; margin-bottom: 20px; background: #333;
     }
-    /* 画像が枠に収まるように */
     .cropper-image-wrapper img { max-width: 100%; display: block; }
 
     @keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
@@ -167,7 +166,7 @@
           <label for="iconFileInput" class="file-upload-btn">
             📂 パソコンから画像を選択
           </label>
-          <input type="file" id="iconFileInput" accept="image/*" style="display:none;">
+          <input type="file" id="iconFileInput" accept="image/png, image/jpeg, image/jpg, image/gif, image/webp" style="display:none;">
 
           <p style="margin: 10px 0;">または色を選択:</p>
           <div class="selection-container" id="iconSelectionContainer" style="justify-content: center; margin-bottom: 20px;"></div>
