--- a/archive.html
+++ b/archive.html
@@ -18,7 +18,7 @@
         <a href="archive.html" class="active">相談を見る</a>
         <a href="#">実績</a>
         <a href="#">お問い合わせ</a>
-        <a href="#" id="logoutBtn" class="account-link" style="color: #ff6b6b;">🚪 ログアウト</a>
+        <a href="#" class="account-btn">ログイン</a>
       </nav>
     </div>
   </header>
