--- a/index.html
+++ b/index.html
@@ -43,7 +43,27 @@
     <img src="senpainet logo.png" alt="SenpaiNet Logo">
   </div>
 </section>
+  
+    <section class="section section-light">
+      <div class="container">
+        <div class="quick-actions">
 
+          <div class="qa-card">
+            <h3>相談を投稿する</h3>
+            <p>受験・勉強・進路のモヤモヤを、匿名で投稿できます。</p>
+            <a href="post.html" class="btn btn-main">＋ 新しい相談を投稿</a>
+          </div>
+
+          <div class="qa-card">
+            <h3>他の相談を見る</h3>
+            <p>他の在校生の相談を読むことで、「一人じゃない」と感じられます。</p>
+            <a href="archive.html" class="btn btn-outline">投稿一覧を開く</a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  
 <!-- SenpaiNetについて -->
 <section class="about fade-up">
   <h2>SenpaiNetについて</h2>
@@ -60,6 +80,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
