--- a/index.html
+++ b/index.html
@@ -74,12 +74,31 @@
   </p>
 </section>
 
+    <!-- Contact -->
+    <section id="contact" class="section section-light">
+      <div class="container">
+        <h2>お問い合わせ</h2>
+
+        <p class="section-lead">ご質問やコラボ依頼などお気軽にどうぞ。</p>
+
+        <form class="contact-form">
+          <input type="text" name="name" placeholder="お名前" required>
+          <input type="email" name="email" placeholder="メールアドレス" required>
+          <textarea name="message" placeholder="ご相談内容・メッセージ" required></textarea>
+          <button type="submit" class="btn btn-main">送信する</button>
+        </form>
+
+      </div>
+    </section>
+
+  
 <footer>
   © 2025 SenpaiNet | All Rights Reserved.
 </footer>
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
