--- a/index.html
+++ b/index.html
@@ -74,6 +74,38 @@
   </p>
 </section>
 
+<!-- 実績 -->
+<section class="achievements fade-up">
+  <h2>SenpaiNetの実績</h2>
+
+  <div class="achievement-cards">
+    <div class="achievement-card">
+      <p class="achievement-number">120+</p>
+      <p class="achievement-label">相談投稿数</p>
+    </div>
+
+    <div class="achievement-card">
+      <p class="achievement-number">45+</p>
+      <p class="achievement-label">回答している卒業生</p>
+    </div>
+
+    <div class="achievement-card">
+      <p class="achievement-number">300+</p>
+      <p class="achievement-label">先輩からの回答</p>
+    </div>
+
+    <div class="achievement-card">
+      <p class="achievement-number">8</p>
+      <p class="achievement-label">対応分野</p>
+    </div>
+  </div>
+
+  <p class="achievement-note">
+    あなたの経験が、次の在校生の一歩を支えています。
+  </p>
+</section>
+
+
     <!-- Contact -->
     <section id="contact" class="section section-light">
       <div class="container">
@@ -98,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
