--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
 
   <div class="achievement-cards">
     <div class="achievement-card">
-      <p class="achievement-number">120+</p>
+      <p class="achievement-number">0</p>
       <p class="achievement-label">相談投稿数</p>
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">45+</p>
-      <p class="achievement-label">回答している卒業生</p>
+      <p class="achievement-number">7</p>
+      <p class="achievement-label">登録在学生</p>
     </div>
 
     <div class="achievement-card">
       <p class="achievement-number">300+</p>
-      <p class="achievement-label">先輩からの回答</p>
+      <p class="achievement-label">登録卒業生</p>
     </div>
 
     <div class="achievement-card">
@@ -101,7 +101,7 @@
   </div>
 
   <p class="achievement-note">
-    あなたの経験が、次の在校生の一歩を支えています。
+    SenpaiNetはISSを卒業したあとも在校生との繋がりを持てるコミュニティを目指します。皆様のご協力よろしくお願いします。
   </p>
 </section>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
